Remove `%` in favor of `?=>` context function standard scala 3 type (#25)
* Update to Build 19-loom+6-625 (2022/4/29)

* Remove `%` in favor of `?=>` standard scala 3 context functions

* docs anf format

* update github action loom jdk version

* add env SBT_OPTS='--add-modules jdk.incubator.concurrent'

* Remove unnecessary SBT_OPTS variable

* Add github command to retrieve info from GitHub

* Update documentation

* Add GitHub token for pull request workflow

* Update documentation

Co-authored-by: franciscodr <francisco.d@47deg.com>